--- a/Booked/appsettings.Development.json
+++ b/Booked/appsettings.Development.json
@@ -5,4 +5,7 @@
       "Microsoft.AspNetCore": "Warning"
     }
   }
+  "ConnectionStrings": {
+    "BookdesPostgresAlpine": "Server=localhost;Database=booked-postgres-alpine;Port=5432;User Id=postgres;Password=PostiaKotiin"
+  }
 }
