--- a/Booked.Tests/Booked.Tests.csproj
+++ b/Booked.Tests/Booked.Tests.csproj
@@ -20,6 +20,7 @@
     <PackageReference Include="Microsoft.TestPlatform.TestHost" Version="17.4.1" />
     <PackageReference Include="Moq" Version="4.18.4" />
     <PackageReference Include="Moq.Dapper" Version="1.0.5" />
+    <PackageReference Include="System.Configuration.ConfigurationManager" Version="7.0.0" />
     <PackageReference Include="Testcontainers" Version="2.3.0" />
     <PackageReference Include="xunit" Version="2.4.2" />
     <PackageReference Include="xunit.runner.console" Version="2.4.2">
@@ -34,7 +35,6 @@
   <ItemGroup>
     <ProjectReference Include="..\Booked\Booked.csproj" />
   </ItemGroup>
-  <ItemGroup />
   <ItemGroup Condition="$(VisualStudioVersion) == '17.0'">
     <Reference Include="Microsoft.Data.Tools.Schema.Sql, Version=15.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
       <HintPath>$(SSDTPath)\Microsoft.Data.Tools.Schema.Sql.dll</HintPath>
