--- a/Booked/App.config
+++ b/Booked/App.config
@@ -2,6 +2,8 @@
 <configuration>
 	<connectionStrings>
 		<add name="Default" connectionString="Data Source=.\books.db;Version=3;" providerName="System.Data.SqlClient"/>
+		<add name ="BookedPostgresAlpine" connectionString="Server=localhost;Database=booked-postgres-alpine;Port=5432;User Id=postgres;Password=PostiaKotiin"/>
+
 	</connectionStrings>
 
   <!-- To customize the asp.net core module uncomment and edit the following section. 
